--- a/bday files/index.html
+++ b/bday files/index.html
@@ -127,11 +127,11 @@ h3 {
         What proofs? Here they are.
     </p>
     <div class="photos">
-    <img src="raji5.jpeg" alt="Rajistha photo 1">
-    <img src="raji10.jpeg" alt="Rajistha photo 2">
-    <img src="raji11.jpeg" alt="Rajistha photo 3">
-    <img src="raji2.jpeg" alt="Rajistha photo 3">
-    <img src="raji19.jpeg" alt="Rajistha photo 3">
+    <img src="bday files/raji5.jpeg" alt="Rajistha photo 1">
+    <img src="bday files/raji10.jpeg" alt="Rajistha photo 2">
+    <img src="bday files/raji11.jpeg" alt="Rajistha photo 3">
+    <img src="bday files/raji2.jpeg" alt="Rajistha photo 3">
+    <img src="bday files/raji19.jpeg" alt="Rajistha photo 3">
 
 
 </div>
@@ -139,19 +139,19 @@ h3 {
 <h3>"The jyep conference that changed it ALL"</h3>
 <p>Forced to sit together instead of past slight misunderstandings, two girls could not have guessed that they would find themselves laughing with each other everyday in the future. Their fate was good to them unlike the plate they threw in the dustbin during the conference.</p>
 <div class="photos">
-    <img src="raji17.jpeg" alt="Rajistha photo 4">
-    <img src="raji18.jpeg" alt="Rajistha photo 5">
-    <img src="raji20.jpeg" alt="Rajistha photo 6">
+    <img src="bday files/raji17.jpeg" alt="Rajistha photo 4">
+    <img src="bday files/raji18.jpeg" alt="Rajistha photo 5">
+    <img src="bday files/raji20.jpeg" alt="Rajistha photo 6">
 </div>
 <h2>Her everyday life ( i swear i did not stalk her )</h2>
 <h3>"ofc i did"</h3>
 <p>I only stalked her only if saving her every picture meant stalking :))</p>
 <div class="photos">
-    <img src="raj.jpg" alt="Rajistha photo 4">
-    <img src="raj1.jpg" alt="Rajistha photo 5">
-    <img src="raji7.jpeg" alt="Rajistha photo 6">
-    <img src="raji12.jpeg" alt="Rajistha photo 6">
-        <img src="raji21.jpeg" alt="Rajistha photo 6">
+    <img src="bday files/raj.jpg" alt="Rajistha photo 4">
+    <img src="bday files/raj1.jpg" alt="Rajistha photo 5">
+    <img src="bday files/raji7.jpeg" alt="Rajistha photo 6">
+    <img src="bday files/raji12.jpeg" alt="Rajistha photo 6">
+        <img src="bday files/raji21.jpeg" alt="Rajistha photo 6">
 
 
 </div>
@@ -160,21 +160,21 @@ h3 {
 <h3>"Everyday"</h3>
 <p>Born with a distroted and (unhinged) great sense of humour this person, naturally , brings joy and laughter all around. </p>
 <div class="photos">
-    <img src="raji14.jpeg" alt="Rajistha photo 4">
-    <img src="raji6.jpeg" alt="Rajistha photo 5">
-    <img src="raji8.jpeg" alt="Rajistha photo 6">
-    <img src="band4.jpeg" alt="Rajistha photo 6">
-    <img src="raji13.jpeg" alt="Rajistha photo 4">
+    <img src="bday files/raji14.jpeg" alt="Rajistha photo 4">
+    <img src="bday files/raji6.jpeg" alt="Rajistha photo 5">
+    <img src="bday files/raji8.jpeg" alt="Rajistha photo 6">
+    <img src="bday files/band4.jpeg" alt="Rajistha photo 6">
+    <img src="bday files/raji13.jpeg" alt="Rajistha photo 4">
 </div>
 <h2>4. What do i think about her?</h2>
 <h3>"everyone knows it"</h3>
 <p>no explaination needed ...</p>
 <div class="photos">
-    <img src="raji.jpeg" alt="Rajistha photo 4">
-    <img src="raji9.jpeg" alt="Rajistha photo 5">
-    <img src="raji3.jpeg" alt="Rajistha photo 6">
-    <img src="raji16.jpeg" alt="Rajistha photo 6">
-    <img src="raji1.jpeg" alt="Rajistha photo 4">
+    <img src="bday files/raji.jpeg" alt="Rajistha photo 4">
+    <img src="bday files/raji9.jpeg" alt="Rajistha photo 5">
+    <img src="bday files/raji3.jpeg" alt="Rajistha photo 6">
+    <img src="bday files/raji16.jpeg" alt="Rajistha photo 6">
+    <img src="bday files/raji1.jpeg" alt="Rajistha photo 4">
 </div>
 <h2>5. Conclusion</h2>
 <h3>"Best for last"</h3>
